test/visibility/use-no-qualified/public-use-no-mod3.good
public-use-no-mod3.chpl:12: In function 'main':
public-use-no-mod3.chpl:14: error: cannot find 'A' in module 'C'
